--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "^3.3.0",
+    "brazilian-values": "^0.10.1",
     "class-validator": "^0.13.1",
+    "dayjs": "^1.10.7",
     "graphql": "^15.5.3",
+    "js-yaml": "^4.1.0",
+    "pad": "^3.2.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,6 +45,8 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/js-yaml": "^4.0.3",
+    "@types/lodash": "^4.14.173",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
